--- a/pushing-data-to-kafka.ipynb
+++ b/pushing-data-to-kafka.ipynb
@@ -17,8 +17,8 @@
    },
    "outputs": [],
    "source": [
-    "api_key = \"PWEUCUXA4575GXRN\"\n",
-    "api_secret = \"SYRj4UPfB0qXJcYL32B+9FZYgT+SPsSlSyLA3Ww26v7NRxxLxBSdgP6A5Nqq842j\""
+    "api_key = \"\"\n",
+    "api_secret = \"\""
    ]
   },
   {
